fixed nav align issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,9 @@
 }
 
             nav {
-                display: block;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
                 position: fixed;
                 margin-top: 0px;
                 padding: 0px;
@@ -59,8 +61,7 @@
                 align-items: center;
                 position: relative;
                 float: left;
-                margin: 10px;
-                padding: 5px;
+                margin-left: 20px;
             }
 
             .navright {
@@ -69,8 +70,7 @@
                 align-items: center;
                 position: relative;
                 float: right;
-                margin: 10px;
-                padding: 5px;
+                margin-right: 20px;
             }
 
             li {
@@ -83,12 +83,7 @@
                 text-decoration: none;
                 color: inherit;
                 margin: auto;
-                padding: 0px;
-            }
-
-            span {
-                display: block;
-                margin-top: 0px;
+                padding: 10px;
             }
 
             span.material-icons {
